@@ -51,8 +51,10 @@ hockeypuck (0.9~a1) precise; urgency=low
   * mgo/worker.go, strings.go, strings_test.go:
     - Simplify keyword search, balance between MongoDB performance
       and search term flexibility. LP: #1108416
+  * instroot/usr/share/hockeypuck-mgo/scripts/fix-keywords.js:
+    - Update fix keyword script to use above simplified approach.
 
- -- Casey Marshall <casey.marshall@gmail.com>  Mon, 18 Feb 2013 22:20:45 -0600
+ -- Casey Marshall <casey.marshall@gmail.com>  Mon, 18 Feb 2013 22:56:02 -0600
 
 hockeypuck (0.8.1) precise; urgency=low
 
